objects/CSS_DataExchange_Parent__c.object
<CustomObject>
    <description>This is used for storing Request &amp; Response values from Triage mobile app or external data system</description>
    <fields>
        <fullName>ACCESS__c</fullName>
        <label>ACCESS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Algorithm__c</fullName>
        <label>Algorithm</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Fire Truck</fullName>
                </value>
                <value>
                    <fullName>Generator Drive (Other Than Standby)</fullName>
                </value>
                <value>
                    <fullName>Generator Drive (Standby Power)</fullName>
                </value>
                <value>
                    <fullName>Marine (Continuous Duty)</fullName>
                </value>
                <value>
                    <fullName>Marine (Heavy Duty)</fullName>
                </value>
                <value>
                    <fullName>Marine (Intermittent Duty)</fullName>
                </value>
                <value>
                    <fullName>Marine(Medium Continuous Duty)</fullName>
                </value>
                <value>
                    <fullName>Marine (Prime Or Continuous Power)</fullName>
                </value>
                <value>
                    <fullName>Marine - Recreational(All Eng)</fullName>
                </value>
                <value>
                    <fullName>Recreational Vehicle</fullName>
                </value>
                <value>
                    <fullName>Recreational Vehicle Ad</fullName>
                </value>
                <value>
                    <fullName>School Bus (Us &amp; Canada)</fullName>
                </value>
                <value>
                    <fullName>Worldwide Bus (Exc Us &amp; Can School Bus)</fullName>
                </value>
                <value>
                    <fullName>Worldwide Off-Highway</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Before_In_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Before_In_Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_Enabled__c</fullName>
        <label>CSS Enabled</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_Job_Number__c</fullName>
        <label>CSS Job Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Category__c</fullName>
        <label>Complaint_Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Code__c</fullName>
        <label>Complaint_Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Text__c</fullName>
        <label>Complaint Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complaint_Type__c</fullName>
        <label>Complaint_Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <label>Created By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerID__c</fullName>
        <label>CustomerID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Company_Name__c</fullName>
        <label>Customer/Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataExchange_Status__c</fullName>
        <label>DataExchange Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UnProcessed</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_In__c</fullName>
        <label>Date In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ERT__c</fullName>
        <label>ERT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN__c</fullName>
        <label>ESN</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Date__c</fullName>
        <label>Failure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Failure_Point__c</fullName>
        <label>Failure Point</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IAS_Number__c</fullName>
        <description>This is a new Text field same as Name field which is Auto Number. Name field refers for First IA Guidanz Mobile version not Azure</description>
        <externalId>true</externalId>
        <label>IAS Number</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MAKE__c</fullName>
        <label>MAKE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDC_Sent_DateTime__c</fullName>
        <label>MDC Sent DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MDC_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MDC Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MODEL__c</fullName>
        <label>MODEL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage_Hours__c</fullName>
        <label>Mileage/Hours</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mileage_Measure__c</fullName>
        <label>Mileage_Measure</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSN__c</fullName>
        <label>PSN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_JSON__c</fullName>
        <label>Request JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_JSON__c</fullName>
        <label>Response JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReturnCodeDescription__c</fullName>
        <label>ReturnCodeDescription</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SERVICEMODELNAME__c</fullName>
        <label>SERVICEMODELNAME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Code__c</fullName>
        <label>SP Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SenderID__c</fullName>
        <label>SenderID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceName__c</fullName>
        <label>ServiceName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceVersion__c</fullName>
        <label>ServiceVersion</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Model_Name__c</fullName>
        <label>Service Model Name</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shop_Work_Order__c</fullName>
        <label>Shop Work Order</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetID__c</fullName>
        <label>TargetID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToolID__c</fullName>
        <label>ToolID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <label>Unit Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_By__c</fullName>
        <label>Updated By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Location__c</fullName>
        <label>User Location</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Location_filtered__c</fullName>
        <label>User Location filtered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Start_Date__c</fullName>
        <label>Warranty_Start_Date</label>
        <type>Date</type>
    </fields>
    <label>CSS_DataExchange_Parent</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ACCESS__c</columns>
        <columns>Created_By__c</columns>
        <columns>CSS_Enabled__c</columns>
        <columns>CSS_Job_Number__c</columns>
        <columns>Customer_Company_Name__c</columns>
        <columns>ERT__c</columns>
        <columns>MAKE__c</columns>
        <columns>MODEL__c</columns>
        <columns>PSN__c</columns>
        <columns>ReturnCodeDescription__c</columns>
        <columns>SERVICEMODELNAME__c</columns>
        <columns>ServiceName__c</columns>
        <columns>Status__c</columns>
        <columns>User_Location_filtered__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IAS-{0000000000}</displayFormat>
        <label>IAS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSS_DataExchange_Parent</pluralLabel>
    <recordTypes>
        <fullName>DE_Inbox</fullName>
        <active>true</active>
        <label>DE-Inbox</label>
    </recordTypes>
    <recordTypes>
        <fullName>DE_Outbox</fullName>
        <active>true</active>
        <label>DE-Outbox</label>
    </recordTypes>
    <recordTypes>
        <fullName>DL_Inbox</fullName>
        <active>true</active>
        <label>DL-Inbox</label>
    </recordTypes>
    <recordTypes>
        <fullName>DL_Outbox</fullName>
        <active>true</active>
        <label>DL-Outbox</label>
    </recordTypes>
    <recordTypes>
        <fullName>IA_Inbox</fullName>
        <active>true</active>
        <label>IA-Inbox</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>